# dipd

./: README.md  pyproject.toml  runtime_vs_features.csv
benchmarks/: plot_runtime.py  runtime_benchmark.py  runtime_vs_features.csv
src/dipd/: __init__.py  consts.py  explainer.py  explanation.py  learners.py  plots.py  utils.py
src/kollabi/: __init__.py  consts.py  explainer.py  explainers.py  explanation.py  groupexplainer.py  learners.py  plots.py
